--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
+        <activity android:name=".ui.ChatListActivity" />
         <activity
             android:name=".ui.ChatActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".ui.ChatListActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
