--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:exported="false"
             android:parentActivityName=".ui.ChatListActivity" />
         <activity
-            android:name=".HomeActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
@@ -33,6 +33,9 @@
         </activity>
         <activity
             android:name=".SignUpActivity">
+        </activity>
+        <activity
+            android:name=".HomeActivity">
         </activity>
     </application>
 
