--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,12 @@
         <activity
             android:name=".HomeActivity">
         </activity>
+        <activity
+            android:name=".TaskActivity">
+        </activity>
+        <activity
+            android:name=".ui.tasks.TaskView">
+        </activity>
     </application>
 
 </manifest>
