--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:exported="false"
             android:parentActivityName=".ui.ChatListActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".login.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
@@ -29,10 +29,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SignInActivity">
+            android:name=".login.SignInActivity">
         </activity>
         <activity
-            android:name=".SignUpActivity">
+            android:name=".login.SignUpActivity">
         </activity>
         <activity
             android:name=".HomeActivity">
