--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ constraintlayoutVersion = "2.2.0"
 coreKtxVersion = "1.15.0"
 eazegraph = "1.2.2"
 firebaseBom = "33.9.0"
+glide = "4.16.0"
 kotlin = "2.1.0"
 coreKtx = "1.15.0"
 coreSplashscreen = "1.0.1"
@@ -49,6 +50,7 @@ androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview
 anychart-android = { module = "com.github.AnyChart:AnyChart-Android", version.ref = "anychartAndroid" }
 eazegraph = { module = "com.github.blackfizz:eazegraph", version.ref = "eazegraph" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
