--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ activityCompose = "1.10.0"
 agp = "8.7.1"
 anychartAndroid = "1.1.2"
 cardview = "1.0.0"
+circleimageview = "3.1.0"
 constraintlayoutVersion = "2.2.0"
 coreKtxVersion = "1.15.0"
 eazegraph = "1.2.2"
@@ -48,6 +49,7 @@ androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version
 androidx-ui = { module = "androidx.compose.ui:ui", version.ref = "ui" }
 androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "uiToolingPreview" }
 anychart-android = { module = "com.github.AnyChart:AnyChart-Android", version.ref = "anychartAndroid" }
+circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
 eazegraph = { module = "com.github.blackfizz:eazegraph", version.ref = "eazegraph" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
