notes is working just gotta save data properly now so that it doesnt dissappear when I reopen the session

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
             android:name=".task.TaskActivity">
         </activity>
 
+        <activity android:name=".notes.NoteEditorActivity" />
+
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
