notes is working just gotta save data properly now so that it doesnt dissappear when I reopen the session

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
             android:name=".task.TaskActivity">
         </activity>
 
-        <activity android:name=".notes.NoteEditorActivity" />
+        <activity android:name=".notes.NoteEditorActivity" >
+        </activity>
 
 
         <meta-data
