refactored all chat files into a new chat directory!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".chat.ChatActivity"
             android:exported="false"
-            android:parentActivityName=".ui.ChatListActivity" />
+            android:parentActivityName=".chat.ChatListActivity" />
         <activity
             android:name=".login.MainActivity"
             android:exported="true"
